--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -12,7 +12,41 @@ intc,generic:
         - sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ reg.base }});
         - qdev_connect_gpio_out(DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});
 ralink,rt2880-intc:
+    irqn_to_regs: 
+        - irqn: 5
+          to_regs:
+            - offset: '0x00'
+              value: '0x00000020'
+              size: '4'
+        - irqn: 12
+          to_regs:
+            - offset: '0x00'
+              value: '0x00001000'
+              size: '4'
     extend: intc,generic
+    get_registers:
+        - rname: r0
+          offset: '0x00'
+          action: False
+          mask_ack: False
+          mask: False
+          unmask: False
+          clean: False
+        - rname: r1
+          offset: '0x34'
+          action: 1 << i
+          mask_ack: False
+          mask: False
+          unmask: True
+          clean: False
+        - rname: r2
+          offset: '0x38'
+          action: 1 << i
+          mask_ack: True
+          mask: False
+          unmask: False
+          clean: False
+    externel: True
 mti,cpu-interrupt-controller:
     get_header:
         - hw/mips/cpudevs.h
