redo the timer template

--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -18,7 +18,7 @@ ralink,rt2880-intc:
         - {rname: r0, offset: '0x00', mask_ack: False, mask: False, unmask: False, ack: False}
         - {rname: r1, offset: '0x34', unmask_action: 1 << irqn, mask_ack: False, mask: False, unmask: True, ack: False}
         - {rname: r2, offset: '0x38', mask_ack_action: 1 << irqn, mask_ack: True, mask: False, unmask: False, ack: False}
-    externel: True
+    external: True
 arm,arm11mp-gic:
     paramters: [name, reg, intcp]
     get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
@@ -39,7 +39,7 @@ marvell,orion-intc:
     get_registers:
         - {rname: r0, offset: '0x00', mask_ack: False, mask: False, unmask: False, ack: False}
         - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (~(1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
-    externel: True
+    external: True
 marvell,orion-bridge-intc:
     irqn_to_regs:
         - {irqn: 1, to_regs: [{offset: '0x00', value: '0x00000002', size: '0x4'}, {offset: '0x04', value: '0x00000002', size: '0x4'}]}
@@ -49,7 +49,7 @@ marvell,orion-bridge-intc:
     get_registers:
         - {rname: r0, offset: '0x00', ack_action: '(~(1 << irqn % 32))', mask_ack: False, mask: False, unmask: False, ack: True}
         - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (~(1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
-    externel: True
+    external: True
 mti,cpu-interrupt-controller:
     paramters: []
     get_irqn: s->cpu->env.irq[{{ irqn }}]
