--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -31,24 +31,24 @@ arm,arm11mp-gic:
         - qdev_connect_gpio_out(DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});
     buddy_compatible: ['arm,arm11mp-twd-timer', 'mpcore_wdt']
 marvell,orion-intc:
-    irqn_to_regs:
-        - {irqn: 0, to_regs: [{offset: '0x00', value: '0x00000001', size: '0x4'}, {offset: '0x04', value: '0x00000001', size: '0x4'}]}
-        - {irqn: 3, to_regs: [{offset: '0x00', value: '0x00000008', size: '0x4'}, {offset: '0x04', value: '0x00000008', size: '0x4'}]}
-        - {irqn: 4, to_regs: [{offset: '0x00', value: '0x00000010', size: '0x4'}, {offset: '0x04', value: '0x00000010', size: '0x4'}]}
-    extend: intc,generic
     get_registers:
         - {rname: r0, offset: '0x00', mask_ack: False, mask: False, unmask: False, ack: False}
-        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (~(1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
+        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | ((1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
+    irqn_to_regs:
+        - {irqn: 0, set_body: ['s->r0 |= 0x00000001;'], clear_body: ['s->r0 &= ~0x00000001;']}
+        - {irqn: 3, set_body: ['s->r0 |= 0x00000008;'], clear_body: ['s->r0 &= ~0x00000008;']}
+        - {irqn: 4, set_body: ['s->r0 |= 0x00000010;'], clear_body: ['s->r0 &= ~0x00000010;']}
+    extend: intc,generic
     external: True
 marvell,orion-bridge-intc:
-    irqn_to_regs:
-        - {irqn: 1, to_regs: [{offset: '0x00', value: '0x00000002', size: '0x4'}, {offset: '0x04', value: '0x00000002', size: '0x4'}]}
-        - {irqn: 2, to_regs: [{offset: '0x00', value: '0x00000004', size: '0x4'}, {offset: '0x04', value: '0x00000004', size: '0x4'}]}
-        - {irqn: 3, to_regs: [{offset: '0x00', value: '0x00000008', size: '0x4'}, {offset: '0x04', value: '0x00000008', size: '0x4'}]}
-    extend: intc,generic
     get_registers:
-        - {rname: r0, offset: '0x00', ack_action: '(~(1 << irqn % 32))', mask_ack: False, mask: False, unmask: False, ack: True}
-        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (~(1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
+        - {rname: r0, offset: '0x00', ack_action: '(~(1 << (irqn % 32)))', mask_ack: False, mask: False, unmask: False, ack: True}
+        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (1 << (irqn % 32)))', mask_ack: False, mask: True, unmask: True, ack: False}
+    irqn_to_regs:
+        - {irqn: 1, set_body: ['s->r0 |= 0x00000002;'], clear_body: ['s->r0 &= ~0x00000002;']}
+        - {irqn: 2, set_body: ['s->r0 |= 0x00000004;'], clear_body: ['s->r0 &= ~0x00000004;']}
+        - {irqn: 3, set_body: ['s->r0 |= 0x00000008;'], clear_body: ['s->r0 &= ~0x00000008;']}
+    extend: intc,generic
     external: True
 mti,cpu-interrupt-controller:
     paramters: []
