--- a/tests/orion5x-netgear-wnr854t.dts
+++ b/tests/orion5x-netgear-wnr854t.dts
@@ -192,9 +192,14 @@
 				status = "okay";
 			};
 
+			pci@30000 {
+				compatible = "marvell,orion-pci";
+				reg = <0x30000 0x2000>;
+			};
+
 			pcie@40000 {
 				compatible = "marvell,orion-pci";
-				reg = <0x40000 0x1000>;
+				reg = <0x40000 0x2000>;
 			};
 
 			ehci@50000 {
